# autonomous-mobile-robot

./: CMakeLists.txt  package.xml  setup.py
mobile_robot/: cmd_publisher_node.py  cpp_node.cpp  pathGenerator.py  path_plotter.py  robot_data.py  tcp_server_node.py
